--- a/spring/TrashAnalysisSystem/build.gradle
+++ b/spring/TrashAnalysisSystem/build.gradle
@@ -13,7 +13,6 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -26,17 +25,18 @@ repositories {
 	maven { url "http://repo.spring.io/milestone" }
 }
 
-
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	// compile('org.springframework.boot:spring-boot-starter-security')
+	compile('org.springframework.boot:spring-boot-starter-security')
+	// compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	runtime('org.springframework.boot:spring-boot-devtools')
-	compile "com.domingosuarez.boot:spring-boot-starter-jade4j:0.3.1"
-
-	runtime('com.h2database:h2')
-	// runtime('mysql:mysql-connector-java')
-	// compileOnly('org.projectlombok:lombok')
+	compile("com.domingosuarez.boot:spring-boot-starter-jade4j:0.3.1")
+	// runtime('com.h2database:h2')
+	compile("org.lazyluke:log4jdbc-remix:0.2.7")
+	compile("mysql:mysql-connector-java:8.0.11")
+	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	// testCompile('org.springframework.security:spring-security-test')
+	testCompile('org.springframework.security:spring-security-test')
+
 }
