--- a/spring/TrashAnalysisSystem/src/main/resources/application.yml
+++ b/spring/TrashAnalysisSystem/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     username: root
     password: yahoo
     initialization-mode: always
+    sql-script-encoding: UTF-8
   jpa:
     show-sql: true
     hibernate:
