--- a/spring/TrashAnalysisSystem/src/main/resources/application.yml
+++ b/spring/TrashAnalysisSystem/src/main/resources/application.yml
@@ -1,16 +1,43 @@
 spring:
+  profiles:
+    active: dev
+
+---
+
+spring:
+  profiles: dev
+  datasource:
+    url: jdbc:h2:mem:test;MODE=MSSQLServer;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password:
+    driverClassName: org.h2.Driver
+    connectionProperties: useUnicode=true;characterEncoding=utf-8;
+    sql-script-encoding: UTF-8
+  h2:
+    console:
+      enable: true
+  jpa:
+    show-sql: true
+
+security:
+  basic:
+    enabled: false
+---
+
+spring:
+  profiles: production
   datasource:
     driver-class-name: net.sf.log4jdbc.DriverSpy
     url: jdbc:log4jdbc:mysql://localhost/tas?useSSL=false&useUnicode=true&characterEncoding=utf8&serverTimezone=JST
     username: root
     password: yahoo
-    initialization-mode: always
+    connectionProperties: useUnicode=true;characterEncoding=utf-8;
     sql-script-encoding: UTF-8
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
+
 security:
   basic:
     enabled: false
-# spring.h2.console.enabled: true
