--- a/spring/TrashAnalysisSystem/build.gradle
+++ b/spring/TrashAnalysisSystem/build.gradle
@@ -30,11 +30,16 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
 	// compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	runtime('org.springframework.boot:spring-boot-devtools')
 	compile("com.domingosuarez.boot:spring-boot-starter-jade4j:0.3.1")
-	// runtime('com.h2database:h2')
-	compile("org.lazyluke:log4jdbc-remix:0.2.7")
-	compile("mysql:mysql-connector-java:8.0.11")
+	compile("com.fasterxml.jackson.core:jackson-core")
+	compile("com.fasterxml.jackson.core:jackson-databind")
+	compile("com.fasterxml.jackson.core:jackson-annotations")
+	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
+
+	runtime('org.springframework.boot:spring-boot-devtools')
+	runtime("org.lazyluke:log4jdbc-remix:0.2.7")
+	runtime("mysql:mysql-connector-java:8.0.11")
+	runtime('com.h2database:h2')
 	compileOnly('org.projectlombok:lombok')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
